update-manager (1:0.133.1) UNRELEASED; urgency=low

  * po/*.po:
    - updated from rosetta

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 09 Mar 2010 09:42:40 +0100

update-manager (1:0.133) lucid; urgency=low

  [ Michael Vogt ]
  * UpdateManager/Core/MetaRelease.py:
    - allow upgrade from unsupported version to unsupported version
  * DistUpgrade/removal_blacklist.cfg:
    - allow removal of update-manager-kde
  * check-new-release-gtk:
    - fixes in the gtk release upgrade check
  * DistUpgrade/xorg_fix_proprietary.py:
    - if /etc/X11/XF86Config-4 is found on upgrade, rename it to
      "XF86Config-4.obsolete"
    - write log to "/var/log/dist-upgrade/xorg_fixup.log"
  * do-release-upgrade, check-new-release:
    - implemented "check-releae-upgrade" as symlink to do-release-upgrade
      and automatically run with "--check-dist-upgrade-only" when called
      as c-r-u
    - add --quiet option to do-release-upgrade
  * debian/update-manager-core.links:
    - install /usr/lib/update-manager/check-new-release as symlink to
      do-release-upgrade -c

  [ Wesley Schwengle ]
  * Check for release upgrade is now also possible with do-release-upgrade
    command: do-release-upgrade -c. (LP: #415026)
  * Added --version/-V to do-release-upgrade (similar to update-manager)

  [ Dustin Kirkland ]
  * debian/91-release-upgrade, debian/update-manager-core.install,
    - some users are complaining of long login times due to the release
      check requiring network connectivity; this information clearly doesn't
      change as frequently as the user logging in, so maintain a cache file
      in /var/lib, display it if it's populated, but otherwise, update it in
      the background if its either missing or the file is older than a day
      old, LP: #522452

  [ Jonathan Riddell ]
  * Do not allow for the removal of update-manager-kde, we do want it after all

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 08 Mar 2010 20:58:44 +0100
