@@ -31,7 +31,7 @@ PostInstallScripts=./xorg_fix_proprietary.py
 # to a known broken version. python2.6 was broken during intrepid->jaunty
 BadVersions=python2.6_2.6.1-1ubuntu8,python-central_0.6.11ubuntu5
 # ubiquity slideshow
-#SlideshowUrl=http://people.canonical.com/~mvo/tmp/slides/
+#SlideshowUrl=http://people.canonical.com/~mvo/ubiquity-slideshow-upgrade/slides/
 
 [KernelRemoval]
 Version=2.6.31
