@@ -21,8 +21,11 @@ def apport_crash(type, value, tb):
     # now add the files in /var/log/dist-upgrade/*
     if os.path.exists('/var/crash/_usr_bin_update-manager.0.crash'):
         report = Report()
-        for f in os.listdir("/var/log/dist-upgrade/"):
-            report[f.replace(".","").replace("-","")] = (open(os.path.join("/var/log/dist-upgrade",f)), )
+        for fname in os.listdir("/var/log/dist-upgrade/"):
+            f = os.path.join("/var/log/dist-upgrade",fname)
+            if not os.path.isfile(f):
+                continue
+            report[f.replace(".","").replace("-","")] = (open(f), )
         report.add_to_existing('/var/crash/_usr_bin_update-manager.0.crash')
     return True
 
