@@ -2,6 +2,9 @@ update-manager (1:0.133.1) UNRELEASED; urgency=low
 
   * po/*.po:
     - updated from rosetta
+  * DistUpgrade/DistUpgradeApport.py:
+    - do not try to add directories under /var/log/dist-upgrade
+      to a apport report (LP: #369951)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 09 Mar 2010 09:42:40 +0100
 
